libqtserialization (0.1.18.84~xenial) xenial; urgency=high

  * Nightly build.

 -- Doug Barbieri <doug@dooglio.net>  Tue, 25 Oct 2016 18:20:34 -0700

libqtserialization (0.1.18.0~xenial) xenial; urgency=high

  * EX-138: Added a writer function to support C strings (char const *).
  * Fixed the test so it would properly create the serialized1.xml file.
  * Added a C string to the test so we can make sure that works.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 25 Oct 2016 13:58:09 -0700

libqtserialization (0.1.17.0~xenial) xenial; urgency=high

  * SNAP-110: Bumped version to get my test system to upgrade properly.
  * Removed intermediate changelog entries from when the build server
    was incrementing the release number instead of the build number.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 13 Sep 2016 11:59:22 -0700

libqtserialization (0.1.3) saucy; urgency=high

  [Alexis Wilke]
  * Updated the C++ warnings: reduced the strict-overlow to 4 instead of 5,
  tested with -Wconversion and fixed many errors.
  * "Fixed" comparison between floating point numbers (== and !=).
  * Fixed the modified_content() signal so it saves the modified
  info in the data table as it should be.
  * Removed some debug code.

 -- R. Douglas Barbieri <doug@dooglio.net>  Tue, 04 Mar 2014 14:42:49 -0800

libqtserialization (0.1.2) saucy; urgency=high

  * Fixed the template definitions as they need to NOT be defined as is in a
  header file (i.e. their are full implementation so they require inline).

 -- R. Douglas Barbieri <doug@dooglio.net>  Mon, 17 Feb 2014 17:27:12 -0800

libqtserialization (0.1.1) saucy; urgency=high

  * Bump for PPA build.

 -- R. Douglas Barbieri <doug@dooglio.net>  Thu, 06 Feb 2014 14:36:47 -0800

libqtserialization (0.1.0-1) quantal; urgency=high

  * Took out incorrect INSTALL.txt call out.

 -- R. Douglas Barbieri <doug@dooglio.net>  Mon, 09 Dec 2013 17:03:29 -0800

libqtserialization (0.1.0+1) quantal; urgency=low

  * Auto build.
