@@ -1,4 +1,4 @@
-Copyright (c) 2012 Made to Order Software Corp.
+Copyright (c) 2012-2017 Made to Order Software Corp.
 
 http://snapwebsites.org/
 contact@m2osw.com
