@@ -1,7 +1,7 @@
-# File:         CMakeLists.txt
+# File:         cmake/CMakeLists.txt
 # Object:       Install necessary cmake modules
 #
-# Copyright:    Copyright (c) 2011-2016 Made to Order Software Corp.
+# Copyright:    Copyright (c) 2011-2017 Made to Order Software Corp.
 #               All Rights Reserved.
 #
 # http://snapwebsites.org/
