@@ -1,6 +1,6 @@
 /*
  * Header:
- *      QSerialization.h
+ *      include/QtSerialization/QSerialization.h
  *
  * Description:
  *      Handling of serialization in a forward and backward manner.
@@ -9,7 +9,7 @@
  *      See the corresponding .cpp file.
  *
  * License:
- *      Copyright (c) 2012 Made to Order Software Corp.
+ *      Copyright (c) 2012-2017 Made to Order Software Corp.
  * 
  *      http://snapwebsites.org/
  *      contact@m2osw.com
