@@ -1,6 +1,6 @@
 /*
  * Header:
- *      QSerializationFieldString.h
+ *      include/QtSerialization/QSerializationFieldString.h
  *
  * Description:
  *      Implementation of the serialization string field for the QReader.
@@ -9,7 +9,7 @@
  *      See the corresponding .cpp file.
  *
  * License:
- *      Copyright (c) 2012 Made to Order Software Corp.
+ *      Copyright (c) 2012-2017 Made to Order Software Corp.
  * 
  *      http://snapwebsites.org/
  *      contact@m2osw.com
