@@ -1,6 +1,6 @@
 /*
  * Text:
- *      QSerialization.cpp
+ *      src/QSerialization.cpp
  *
  * Description:
  *      Handling the serialization of structures (composites) in Qt in a way
@@ -10,7 +10,7 @@
  *      See each function below.
  *
  * License:
- *      Copyright (c) 2012 Made to Order Software Corp.
+ *      Copyright (c) 2012-2017 Made to Order Software Corp.
  *
  *      http://snapwebsites.org/
  *      contact@m2osw.com
