@@ -1,6 +1,6 @@
 /*
  * Header:
- *      QSerializationReader.cpp
+ *      src/QSerializationReader.cpp
  *
  * Description:
  *      Read serialized data from a stream and save it in fields and
@@ -10,7 +10,7 @@
  *      See the corresponding .cpp file.
  *
  * License:
- *      Copyright (c) 2012 Made to Order Software Corp.
+ *      Copyright (c) 2012-2017 Made to Order Software Corp.
  * 
  *      http://snapwebsites.org/
  *      contact@m2osw.com
