@@ -1,6 +1,6 @@
 /*
  * Header:
- *      QSerializationWriter.cpp
+ *      src/QSerializationWriter.cpp
  *
  * Description:
  *      Write data to a stream in a serialized manner that can be later read
@@ -11,7 +11,7 @@
  *      See the corresponding .cpp file.
  *
  * License:
- *      Copyright (c) 2012 Made to Order Software Corp.
+ *      Copyright (c) 2012-2017 Made to Order Software Corp.
  * 
  *      http://snapwebsites.org/
  *      contact@m2osw.com
